# tui-forms

./: .editorconfig  .gitignore  .vale.ini  AGENTS.md  CHANGES.md  Makefile  README.md  pyproject.toml
.github/instructions/: docs.instructions.md  readme.instructions.md
.github/workflows/: changelog.yml  config.yml  docs.yml  main.yml
docs/: .gitignore  Makefile
docs/src/: conf.py  glossary.md  index.md  robots.txt
docs/src/concepts/: documentation-structure.md  index.md  schema-first-design.md
docs/src/how-to-guides/: contribute.md  create-renderer.md  index.md  test-with-pytest-plugin.md  use-in-project.md
docs/src/reference/: base-renderer.md  index.md  jsonschema-support.md  public-api.md  pytest-fixtures.md  renderer-cookiecutter.md  renderer-noinput.md  renderer-rich.md  renderer-stdlib.md
docs/src/tutorials/: conditional-questions.md  custom-validator.md  hidden-fields.md  index.md  your-first-form.md
docs/styles/config/vocabularies/Base/: accept.txt
news/: +conditional-questions.feature  +format-validators.feature  +hidden-fields.feature  +jinja2-defaults.feature  +meta-schema.feature  +object-subquestions.feature  +pluggable-renderers.feature  +progress-indicator.feature  +public-api.feature  +question-types.feature  +ref-resolution.feature  +renderer-cookiecutter.feature  +renderer-rich.feature  +renderer-stdlib.feature  +root-key.feature  +schema-parsing.feature  +schema-validator-key.feature  +user-answers.feature  1.bugfix  1.documentation  10.feature  16.bugfix  17.bugfix  19.feature  2.bugfix  20.bugfix  21.bugfix  23.bugfix  24.internal  25.bugfix  27.bugfix  29.bugfix  3.bugfix  3.documentation  5.bugfix  6.bugfix  7.bugfix  8.feature  9.feature
src/tui_forms/: __init__.py  _api.py  parser.py  schema.json
src/tui_forms/demo/: __main__.py  cookieplone.json  distribution.json  showcase.json
src/tui_forms/fixtures/: __init__.py  _protocols.py  plugin.py
src/tui_forms/form/: __init__.py  form.py  question.py
src/tui_forms/renderer/: base.py  cookiecutter.py  noinput.py  rich.py  stdlib.py
src/tui_forms/utils/: template.py  validators.py
tests/: conftest.py  test_api.py  test_fixtures_plugin.py
tests/_resources/: rjsf-enum-objects.json  rjsf-if-then-else.json  rjsf-pattern-properties.json
tests/form/: test_form.py  test_form_root_key.py  test_question_multiple.py  test_question_overrides.py
tests/parser/: test_issue_25.py  test_parser.py  test_parser_form.py  test_parser_format.py  test_parser_keywords.py
tests/renderer/: conftest.py  test_back_navigation.py  test_computed_fields_on_retry.py  test_computed_fields_root_key.py  test_cookiecutter.py  test_go_back_retains_answers.py  test_noinput.py  test_rich.py  test_stdlib.py  test_summary.py
tests/utils/: test_template.py  test_validators.py
